# crc32-wasm

./: Cargo.toml  README.md  index.ts  package-lock.json  package.json
js-bindings/: crc32_wasm.core.wasm  crc32_wasm.d.ts  crc32_wasm.js  crc_wasm.core.wasm  crc_wasm.d.ts  crc_wasm.js
js-bindings/interfaces/: component-crc-wasm-crc32-hasher.d.ts  component-crc-wasm-crc64-nvme-hasher.d.ts  component-crc32-wasm-crc32-hasher.d.ts
src/: bindings.rs  lib.rs
wit/: world.wit
