[package]
name = "crc-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
crc32fast = "1.4.2"
wit-bindgen-rt = { version = "0.32.0", features = ["bitflags"] }
crc64fast-nvme = "1.0.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:crc-wasm"

[package.metadata.component.dependencies]
